<!--
  ~     Copyright © 2020 Manuel Olguín Muñoz <manuel@olguin.se>
  ~
  ~     strings.xml is part of Island Gardener
  ~
  ~     Island Gardener is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Island Gardener is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Island Gardener.  If not, see <https://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Island Gardener</string>
    <string name="flower_json">data/flower_data.json</string>
    <string name="loading_text">Loading flower data…</string>
    <string name="select_parent1">Parent 1</string>
    <string name="select_parent2">Parent 2</string>
    <string name="select_species">Species</string>
    <string name="color_heading">Color</string>
    <string name="genotype_heading">Genotype</string>
    <string name="origin_heading">Origin</string>
    <string name="placeholder">PLACEHOLDER</string>
    <string name="close">Close</string>
    <string name="variants_fmt_string">Any of %d variants.</string>
    <string name="placeholder_percent">00%</string>
    <string name="group_heading_fmt">%s (Any)</string>
    <string name="about">About</string>
    <string name="collaborate">Wish to report a bug, or to collaborate? Head over to https://github.com/molguin92/IslandGardener !</string>
    <string name="source_license">
Copyright © 2020  Manuel Olguín Muñoz\n
\n
This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.\n
\n
This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
GNU General Public License for more details.\n
\n
You should have received a copy of the GNU General Public License
along with this program. If not, see https://www.gnu.org/licenses/.
    </string>
    <string name="app_icon_license">
Island Gardener Icon by Paola Olguín Muñoz is licensed under CC BY-SA 4.0.\n
To view a copy of this license, visit https://creativecommons.org/licenses/by-sa/4.0
    </string>
    <string name="icon_attribution">
In-app icons have been obtained under CC-BY Licenses 2.0 from the Noun Project https://thenounproject.com/\n
\n
Attributions\n
Hyacinth: Lavender by Phạm Thanh Lộc\n
Cosmo: Flower by Andi Nur Abdillah\n
Tulip: Tulip by Kevin Kwok\n
Lily: lily by dDara\n
Mum: Chrysanthemum by emilegraphics\n
Pansy: Pansy by Phạm Thanh Lộc\n
Rose: Rose by kareemovic\n
Windflower: anemone by Flatart
    </string>
    <string name="advanced_mode">Advanced mode</string>
    <string name="gene_mode">Inverse W gene notation</string>
</resources>
