<!--
  ~     Copyright © 2020 Manuel Olguín Muñoz <manuel@olguin.se>
  ~
  ~     menu_main.xml is part of Island Gardener
  ~
  ~     Island Gardener is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Island Gardener is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Island Gardener.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/advanced_mode_switch"
        android:title="@string/advanced_mode"
        app:showAsAction="never"
        android:checkable="true"
        android:icon="@drawable/ic_flower_gray"/>

    <item
        android:id="@+id/wgene_mode_switch"
        android:title="@string/gene_mode"
        app:showAsAction="never"
        android:checkable="true" />

    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_info_gray"
        app:showAsAction="never"
        android:title="@string/about" />
</menu>
