<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/flower_details"
    android:background="?android:selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/flowerIcon"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:maxHeight="75dp"
        app:srcCompat="@drawable/cosmo_black" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/color_heading"
                android:textStyle="bold"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/flower_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_marginStart="15dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/genotype_heading"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/flower_genotype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textStyle="italic"
                android:textSize="18sp"
                android:layout_marginStart="15dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/origin_heading"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/flower_origin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textSize="18sp"
                android:layout_marginStart="15dp" />
        </TableRow>
    </TableLayout>
</LinearLayout>
